# FSI-video

./: .gitignore  audio_getter.py  main.py  prompts.txt  pyproject.toml  readme.md  requirements.txt
app/: main.py
core/: audio_operations.py  config.py  utils.py  wordcloud.py
