[project]
name = "video-process"
version = "0.1.0"
description = ""
authors = [
    {name = "Luiz Carlos Souza Garcia",email = "lcsouzagarcia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyaudio (>=0.2.14,<0.3.0)",
    "openai-whisper (>=20240930,<20240931)",
    "yt-dlp (>=2025.5.22,<2026.0.0)",
    "ffprobe (>=0.5,<0.6)",
    "ffmpeg (>=1.4,<2.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
